# flash-attention-ece-9660

./: .gitignore  README.md  pyproject.toml
code/: og.csv  ours.csv
flash_attention/: __init__.py  benchmark.py  benchmark_single.py  blocks.py
flash_attention/triton/: kernels.py  wrappers.py
results/: benchmark_results.csv
